# your_AI_study_agent

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  USAGE.md  debug.md  demo.py  pyproject.toml  quickstart.sh  rebuild_indexes.py  requirements.txt
backend/: api.py  schemas.py
core/agents/: grader.py  quizmaster.py  router.py  tutor.py
core/llm/: openai_compat.py
core/orchestration/: policies.py  prompts.py  runner.py
data/memory/: memory.db
frontend/: streamlit_app.py
mcp_tools/: client.py
memory/: __init__.py  manager.py  store.py
rag/: chunk.py  embed.py  ingest.py  retrieve.py  store_faiss.py
tests/: sample_textbook.txt  test_basic.py
