[tool.poetry]
name = "course-agent"
version = "0.1.0"
description = "AI-powered course learning assistant with RAG and multi-agent orchestration"
authors = ["Eric He"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
streamlit = "^1.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
openai = "^1.12.0"
pymupdf = "^1.23.0"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.3.0"
numpy = "^1.24.0"
requests = "^2.31.0"
aiofiles = "^23.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
